--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Você decide o futuro da IA</title>
+    <title>O mundo das jogadas</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
